--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       border-radius:14px; background:#facc15; color:#1e3a8a;
       border:none; cursor:pointer; box-shadow:0 6px 15px rgba(0,0,0,0.35);
     }
+    .btn-white{
+      padding:22px 36px; font-size:22px; font-weight:700;
+      border-radius:14px; background:#ffffff; color:#1e3a8a;
+      border:none; cursor:pointer; box-shadow:0 6px 15px rgba(0,0,0,0.25);
+    }
 
     /* centered blue screens */
     .screen-blue{
@@ -48,6 +53,9 @@
       border-radius:12px; border:none; outline:none;
       margin-bottom:22px;
     }
+
+    .subline{ margin-top:-6px; font-size:16px; }
+    .muted{ opacity:0.9; }
 
     /* Judging template rows */
     .score-row{ margin: 14px 0; }
@@ -82,12 +90,33 @@
     label{ font-weight:800; display:block; margin-top:10px; margin-bottom:6px; }
     input[type="text"]{ width:100%; padding:12px; border-radius:12px; border:1px solid #d1d5db; }
     button{ margin-top:10px; margin-right:8px; }
+
+    /* Winner cards */
+    .winner-card{
+      border-radius:16px;
+      padding:16px;
+      box-shadow:0 10px 20px rgba(0,0,0,0.08);
+      border:1px solid #e5e7eb;
+      margin-bottom:14px;
+    }
+    .winner-title{
+      font-size:20px;
+      font-weight:900;
+      margin:0 0 10px;
+    }
+    .winner-grid{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap:6px;
+      font-size:15px;
+    }
+    .kv b{ font-weight:900; }
   </style>
 </head>
 
 <body>
 
-  <!-- INTRO -->
+  <!-- INTRO SCREEN -->
   <div id="introScreen" class="screen-blue" style="display:flex;">
     <h1 style="font-size:42px; font-weight:800; margin-bottom:18px;">Orpington Show Judging</h1>
 
@@ -97,7 +126,7 @@
     <button class="btn-yellow" onclick="startApp()">Start Judging</button>
   </div>
 
-  <!-- SHOW -->
+  <!-- SHOW SCREEN -->
   <div id="showScreen" class="screen-blue" style="display:none;">
     <h1 style="font-size:34px; font-weight:800; margin-bottom:18px;">Select Show</h1>
 
@@ -111,7 +140,7 @@
     <button class="btn-yellow" onclick="saveShowAndContinue()">Next</button>
   </div>
 
-  <!-- JUDGE -->
+  <!-- JUDGE SCREEN -->
   <div id="judgeScreen" class="screen-blue" style="display:none;">
     <h1 style="font-size:34px; font-weight:800; margin-bottom:18px;">Judge Name</h1>
 
@@ -120,7 +149,7 @@
     <button class="btn-yellow" onclick="saveJudgeAndContinue()">Next</button>
   </div>
 
-  <!-- CLASS (auto-next) -->
+  <!-- CLASS SCREEN -->
   <div id="classScreen" class="screen-blue" style="display:none;">
     <h1 style="font-size:34px; font-weight:800; margin-bottom:18px;">Select Class</h1>
 
@@ -136,7 +165,7 @@
     </p>
   </div>
 
-  <!-- COLOUR (scroll + next fallback) -->
+  <!-- COLOUR SCREEN -->
   <div id="colourScreen"
        style="
          display:none;
@@ -182,10 +211,12 @@
         <button class="pill" onclick="selectColour('CHOCOLATE')">Chocolate</button>
         <button class="pill" onclick="selectColour('LAVENDER')">Lavender</button>
         <button class="pill" onclick="selectColour('JUBILEE')">Jubilee</button>
+
         <button class="pill" onclick="selectColour('CUCKOO')">Cuckoo</button>
         <button class="pill" onclick="selectColour('PARTRIDGE')">Partridge</button>
         <button class="pill" onclick="selectColour('SILVER_LACED')">Silver Laced</button>
         <button class="pill" onclick="selectColour('GOLD_LACED')">Gold Laced</button>
+
         <button class="pill" onclick="selectColour('RED')">Red</button>
         <button class="pill" onclick="selectColour('ISABEL')">Isabel</button>
         <button class="pill" onclick="selectColour('CRELE')">Crele</button>
@@ -199,14 +230,14 @@
     </div>
   </div>
 
-  <!-- JUDGING (ONLY Save + View Results) -->
+  <!-- JUDGING SCREEN -->
   <div id="judgingScreen" style="display:none; height:100vh; overflow:auto; padding:20px; background:#eef2ff;">
     <h1>🐔 Orpington Judging</h1>
 
-    <p style="margin-top:-8px;">Show: <strong><span id="showNameDisplay">-</span></strong></p>
-    <p style="margin-top:-8px;">Judge: <strong><span id="judgeNameDisplay">-</span></strong></p>
-    <p style="margin-top:-8px;">Class: <strong><span id="classNameDisplay">-</span></strong></p>
-    <p style="margin-top:-8px;">Colour: <strong><span id="colourNameDisplay">-</span></strong></p>
+    <p class="subline">Show: <strong><span id="showNameDisplay">Not selected</span></strong></p>
+    <p class="subline">Judge: <strong><span id="judgeNameDisplay">Not selected</span></strong></p>
+    <p class="subline">Class: <strong><span id="classNameDisplay">Not selected</span></strong></p>
+    <p class="subline">Colour: <strong><span id="colourNameDisplay">Not selected</span></strong></p>
 
     <div class="card">
       <div style="display:flex; gap:10px; flex-wrap:wrap; margin-bottom:10px;">
@@ -226,7 +257,7 @@
 
       <div style="margin-top:14px;">
         <h2 style="margin-bottom:6px;">SA Scale of Points</h2>
-        <div id="templateName" style="opacity:0.9; margin-bottom:10px;"></div>
+        <div id="templateName" class="muted" style="margin-bottom:10px;"></div>
         <div id="scoringContainer"></div>
       </div>
 
@@ -261,33 +292,19 @@
     </div>
   </div>
 
-  <!-- RESULTS (all buttons live here) -->
+  <!-- RESULTS SCREEN -->
   <div id="resultsScreen" style="display:none; height:100vh; overflow:auto; padding:20px; background:#ffffff;">
     <h1>🏆 Results</h1>
 
-    <p style="margin-top:-8px;">Show: <strong><span id="resultsShowName">-</span></strong></p>
-    <p style="margin-top:-8px;">Class: <strong><span id="resultsClassName">-</span></strong></p>
+    <p class="subline">Show: <strong><span id="resultsShowName">-</span></strong></p>
+    <p class="subline">Judge: <strong><span id="resultsJudgeName">-</span></strong></p>
+    <p class="subline">Class: <strong><span id="resultsClassName">-</span></strong></p>
 
     <div class="card">
       <div style="display:flex; gap:10px; flex-wrap:wrap; margin-bottom:10px;">
         <button type="button" onclick="backToJudgingFromResults()"
           style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:800; cursor:pointer;">
           ← Back to Judging
-        </button>
-
-        <button type="button" onclick="viewBestClassColour()"
-          style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
-          Best in Class + Colour (Top 5)
-        </button>
-
-        <button type="button" onclick="viewBestVariety()"
-          style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
-          Best in Variety (Top 3)
-        </button>
-
-        <button type="button" onclick="viewBestInBreed()"
-          style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
-          Best in Breed
         </button>
 
         <button type="button" onclick="exportCSV()"
@@ -301,12 +318,76 @@
         </button>
       </div>
 
+      <!-- ✅ three buttons you already have (these will now open NEW pages) -->
+      <div style="display:flex; gap:10px; flex-wrap:wrap; margin-bottom:14px;">
+        <button type="button" onclick="openBestClassPage()"
+          style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
+          Best in Class (Top 5)
+        </button>
+
+        <button type="button" onclick="openBestVarietyPage()"
+          style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
+          Best in Variety (Top 3)
+        </button>
+
+        <button type="button" onclick="openBestInBreedPage()"
+          style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
+          Best in Breed
+        </button>
+      </div>
+
       <div id="resultsPageContent"></div>
     </div>
   </div>
 
+  <!-- ✅ NEW PAGE: BEST IN CLASS -->
+  <div id="bestClassPage" style="display:none; height:100vh; overflow:auto; padding:20px; background:#ffffff;">
+    <h1>🏆 Best in Class (Top 5)</h1>
+
+    <div style="margin-bottom:12px;">
+      <button type="button" onclick="backToResultsFromBestPages()"
+        style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
+        ← Back to Results
+      </button>
+    </div>
+
+    <div class="card">
+      <div id="bestClassContent"></div>
+    </div>
+  </div>
+
+  <!-- ✅ NEW PAGE: BEST IN VARIETY -->
+  <div id="bestVarietyPage" style="display:none; height:100vh; overflow:auto; padding:20px; background:#ffffff;">
+    <h1>🏆 Best in Variety (Top 3)</h1>
+
+    <div style="margin-bottom:12px;">
+      <button type="button" onclick="backToResultsFromBestPages()"
+        style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
+        ← Back to Results
+      </button>
+    </div>
+
+    <div class="card">
+      <div id="bestVarietyContent"></div>
+    </div>
+  </div>
+
+  <!-- ✅ NEW PAGE: BEST IN BREED -->
+  <div id="bestBreedPage" style="display:none; height:100vh; overflow:auto; padding:20px; background:#ffffff;">
+    <h1>🏆 Best in Breed</h1>
+
+    <div style="margin-bottom:12px;">
+      <button type="button" onclick="backToResultsFromBestPages()"
+        style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
+        ← Back to Results
+      </button>
+    </div>
+
+    <div id="bestBreedContent"></div>
+  </div>
+
   <!-- cache-bust -->
-  <script src="app.js?v=9003"></script>
+  <script src="app.js?v=11001"></script>
 </body>
 </html>
 
