--- a/index.html
+++ b/index.html
@@ -9,116 +9,280 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
-    html, body { margin:0; padding:0; height:100%; overflow:hidden; font-family: Arial, sans-serif; }
+  :root{
+    --bg0:#0b1220;
+    --bg1:#0f1b3a;
+    --bg2:#122a63;
 
-    .btn-yellow{
-      padding:22px 36px; font-size:22px; font-weight:700;
-      border-radius:14px; background:#facc15; color:#1e3a8a;
-      border:none; cursor:pointer; box-shadow:0 6px 15px rgba(0,0,0,0.35);
-    }
-    .btn-white{
-      padding:22px 36px; font-size:22px; font-weight:700;
-      border-radius:14px; background:#ffffff; color:#1e3a8a;
-      border:none; cursor:pointer; box-shadow:0 6px 15px rgba(0,0,0,0.25);
-    }
+    --card: rgba(255,255,255,0.08);
+    --card2: rgba(255,255,255,0.12);
+    --stroke: rgba(255,255,255,0.14);
 
-    /* centered blue screens */
-    .screen-blue{
-      text-align:center;
-      min-height:100vh;
-      padding:24px 16px;
-      background:#1e3a8a;
-      color:white;
+    --text:#eef2ff;
+    --muted: rgba(238,242,255,0.72);
 
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      flex-direction:column;
+    --brand:#facc15;
+    --brandText:#0b1220;
 
-      overflow:hidden;
-    }
+    --teal:#14b8a6;
+    --danger:#ef4444;
 
-    .grid-wrap{
-      display:flex; flex-wrap:wrap; gap:14px; justify-content:center;
-      width:min(760px, 95%);
-    }
-    .pill{
-      padding:14px 18px; font-size:18px; font-weight:800;
-      border-radius:14px; background:#facc15; color:#1e3a8a;
-      border:none; cursor:pointer;
-    }
-    .input-wide{
-      width:min(520px, 90%);
-      padding:16px 14px; font-size:18px;
-      border-radius:12px; border:none; outline:none;
-      margin-bottom:22px;
-    }
+    --shadow: 0 18px 45px rgba(0,0,0,0.35);
+    --shadow2: 0 10px 22px rgba(0,0,0,0.25);
 
-    .subline{ margin-top:-6px; font-size:16px; }
-    .muted{ opacity:0.9; }
+    --r16:16px;
+    --r14:14px;
+    --r12:12px;
+  }
 
-    /* Judging template rows */
-    .score-row{ margin: 14px 0; }
-    .score-row label{ display:block; font-weight:800; margin-bottom:6px; }
-    .score-help{ font-size:13px; opacity:0.8; margin-top:-6px; margin-bottom:6px; }
-    .score-line{ display:flex; align-items:center; gap:10px; }
-    .score-line input[type="range"]{ width:100%; }
-    .score-badge{
-      min-width:44px; text-align:center; font-weight:900;
-      padding:6px 10px; border-radius:10px;
-      background:#e5e7eb; color:#111827;
-    }
+  /* Base */
+  html, body {
+    margin:0; padding:0; height:100%;
+    overflow:hidden;
+    font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
+    background: radial-gradient(1200px 700px at 20% 10%, rgba(250,204,21,0.10), transparent 55%),
+                radial-gradient(1100px 650px at 80% 25%, rgba(20,184,166,0.10), transparent 55%),
+                linear-gradient(180deg, var(--bg0), var(--bg1) 60%, var(--bg2));
+    color: var(--text);
+  }
 
-    textarea{ width:100%; padding:12px; border-radius:12px; border:1px solid #d1d5db; }
-    select{ padding:12px; border-radius:12px; border:1px solid #d1d5db; width:100%; }
+  * { box-sizing: border-box; }
 
-    .dq-box{
-      margin-top:14px;
-      padding:12px;
-      border-radius:14px;
-      border:1px solid #e5e7eb;
-      background:#f9fafb;
-    }
+  h1, h2, h3 { letter-spacing:-0.02em; }
+  h1 { margin: 0 0 10px; }
+  p { margin: 6px 0; color: var(--muted); }
 
-    .danger{
-      background:#dc2626; color:white; border:none;
-      padding:12px 16px; border-radius:12px; font-weight:800;
-      cursor:pointer;
-    }
+  /* Screens */
+  .screen-blue{
+    text-align:center;
+    min-height:100vh;
+    padding:26px 16px;
+    color:var(--text);
 
-    .card{ background:white; border-radius:16px; padding:16px; box-shadow:0 8px 20px rgba(0,0,0,0.08); }
-    label{ font-weight:800; display:block; margin-top:10px; margin-bottom:6px; }
-    input[type="text"]{ width:100%; padding:12px; border-radius:12px; border:1px solid #d1d5db; }
-    button{ margin-top:10px; margin-right:8px; }
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
 
-    /* Winner cards */
-    .winner-card{
-      border-radius:16px;
-      padding:16px;
-      box-shadow:0 10px 20px rgba(0,0,0,0.08);
-      border:1px solid #e5e7eb;
-      margin-bottom:14px;
-      background:#ffffff;
-    }
-    .winner-title{
-      font-size:20px;
-      font-weight:900;
-      margin:0 0 10px;
-    }
-    .winner-grid{
-      display:grid;
-      grid-template-columns: 1fr;
-      gap:6px;
-      font-size:15px;
-    }
-    .kv b{ font-weight:900; }
+    overflow:hidden;
+    position:relative;
+  }
 
-    .section-title{
-      margin: 14px 0 8px;
-      font-weight:900;
-      opacity:0.9;
-    }
-  </style>
+  .screen-blue::before{
+    content:"";
+    position:absolute; inset:-2px;
+    background:
+      radial-gradient(900px 520px at 20% 15%, rgba(250,204,21,0.16), transparent 60%),
+      radial-gradient(900px 520px at 80% 22%, rgba(20,184,166,0.14), transparent 60%);
+    pointer-events:none;
+  }
+
+  /* “Hero” image */
+  #introScreen img{
+    max-width: 72%;
+    border-radius: 22px !important;
+    box-shadow: var(--shadow) !important;
+    border: 1px solid rgba(255,255,255,0.18);
+    transform: translateZ(0);
+  }
+
+  /* Inputs */
+  .input-wide{
+    width:min(560px, 92%);
+    padding:16px 14px;
+    font-size:18px;
+    border-radius: var(--r14);
+    border:1px solid rgba(255,255,255,0.15);
+    outline:none;
+    background: rgba(255,255,255,0.10);
+    color: var(--text);
+    box-shadow: 0 8px 18px rgba(0,0,0,0.18);
+    margin-bottom: 18px;
+  }
+
+  select.input-wide option { color:#111827; }
+
+  /* Buttons */
+  .btn-yellow, .pill, button{
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  .btn-yellow{
+    padding:20px 34px;
+    font-size:20px;
+    font-weight:900;
+    border-radius: 16px;
+    background: linear-gradient(180deg, #fde047, #facc15);
+    color: var(--brandText);
+    border: 1px solid rgba(0,0,0,0.18);
+    cursor:pointer;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25);
+    transition: transform .08s ease, filter .12s ease;
+    position:relative;
+    z-index:1;
+  }
+  .btn-yellow:active{ transform: scale(0.98); filter: brightness(0.98); }
+
+  .btn-white{
+    padding:16px 18px;
+    font-size:16px;
+    font-weight:900;
+    border-radius: 14px;
+    background: rgba(255,255,255,0.12);
+    color: var(--text);
+    border: 1px solid rgba(255,255,255,0.18);
+    cursor:pointer;
+    box-shadow: var(--shadow2);
+  }
+
+  .danger{
+    background: linear-gradient(180deg, #f87171, #ef4444);
+    color:white;
+    border:none;
+    padding:12px 16px;
+    border-radius:14px;
+    font-weight:900;
+    cursor:pointer;
+    box-shadow: 0 12px 24px rgba(239,68,68,0.25);
+  }
+
+  /* Pills (class/colour buttons) */
+  .grid-wrap{
+    display:flex; flex-wrap:wrap; gap:12px; justify-content:center;
+    width:min(820px, 96%);
+    position:relative;
+    z-index:1;
+  }
+
+  .pill{
+    padding:14px 16px;
+    font-size:16px;
+    font-weight:950;
+    border-radius: 999px;
+    background: rgba(255,255,255,0.12);
+    color: var(--text);
+    border: 1px solid rgba(255,255,255,0.18);
+    cursor:pointer;
+    box-shadow: 0 10px 18px rgba(0,0,0,0.18);
+    transition: transform .08s ease, background .12s ease;
+  }
+  .pill:active{ transform: scale(0.98); }
+
+  /* Colour scroll box */
+  #colourScrollBox{
+    background: rgba(255,255,255,0.08) !important;
+    border: 1px solid rgba(255,255,255,0.16) !important;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,0.08);
+  }
+
+  /* Judging + Results pages */
+  #judgingScreen, #resultsScreen, #bestClassPage, #bestVarietyPage, #bestBreedPage{
+    background:
+      radial-gradient(900px 520px at 15% 5%, rgba(250,204,21,0.10), transparent 55%),
+      radial-gradient(900px 520px at 85% 20%, rgba(20,184,166,0.10), transparent 55%),
+      linear-gradient(180deg, #0b1220, #0f1b3a 60%, #122a63) !important;
+    color: var(--text) !important;
+  }
+
+  .subline{ margin-top:-6px; font-size:15px; color: var(--muted); }
+  .muted{ opacity: 0.85; color: var(--muted); }
+
+  /* Card */
+  .card{
+    background: rgba(255,255,255,0.10) !important;
+    border: 1px solid rgba(255,255,255,0.14) !important;
+    border-radius: 18px !important;
+    padding: 16px !important;
+    box-shadow: var(--shadow) !important;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+  }
+
+  label{ font-weight:900; display:block; margin-top:10px; margin-bottom:6px; color: var(--text); }
+
+  input[type="text"], textarea, select{
+    background: rgba(255,255,255,0.10);
+    color: var(--text);
+    border: 1px solid rgba(255,255,255,0.14);
+  }
+  textarea::placeholder, input::placeholder{ color: rgba(238,242,255,0.55); }
+
+  /* Slider rows */
+  .score-row{ margin: 14px 0; }
+  .score-help{ font-size:13px; opacity:0.8; margin-top:-6px; margin-bottom:6px; color: var(--muted); }
+
+  .score-badge{
+    min-width:46px;
+    text-align:center;
+    font-weight:950;
+    padding:7px 10px;
+    border-radius: 12px;
+    background: rgba(250,204,21,0.18);
+    border: 1px solid rgba(250,204,21,0.25);
+    color: var(--text);
+  }
+
+  /* DQ box */
+  .dq-box{
+    margin-top:14px;
+    padding:12px;
+    border-radius: 16px;
+    border: 1px solid rgba(255,255,255,0.14);
+    background: rgba(255,255,255,0.08);
+  }
+
+  /* Winner cards */
+  .winner-card{
+    border-radius:18px;
+    padding:16px;
+    box-shadow: var(--shadow2);
+    border: 1px solid rgba(255,255,255,0.16);
+    margin-bottom:14px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+  }
+  .winner-title{
+    font-size:18px;
+    font-weight:950;
+    margin:0 0 10px;
+    color: var(--text);
+  }
+  .winner-grid{
+    display:grid;
+    grid-template-columns: 1fr;
+    gap:6px;
+    font-size:15px;
+    color: rgba(238,242,255,0.90);
+  }
+
+  /* Make the plain buttons on judging/results look consistent */
+  #judgingScreen button, #resultsScreen button, #bestClassPage button, #bestVarietyPage button, #bestBreedPage button{
+    border-radius: 14px !important;
+    font-weight: 900 !important;
+  }
+
+  /* Reduce “white” look on default buttons */
+  #judgingScreen button, #resultsScreen button, #bestClassPage button, #bestVarietyPage button, #bestBreedPage button{
+    background: rgba(255,255,255,0.10) !important;
+    color: var(--text) !important;
+    border: 1px solid rgba(255,255,255,0.16) !important;
+  }
+
+  /* Keep your yellow primary button special */
+  #introScreen .btn-yellow, #showScreen .btn-yellow, #judgeScreen .btn-yellow, #colourScreen .btn-yellow{
+    background: linear-gradient(180deg, #fde047, #facc15) !important;
+    color: var(--brandText) !important;
+    border: 1px solid rgba(0,0,0,0.18) !important;
+  }
+
+  /* Small responsive polish */
+  @media (max-width: 420px){
+    .btn-yellow{ padding:18px 24px; font-size:18px; }
+    .pill{ font-size:15px; padding:12px 14px; }
+    #introScreen img{ max-width: 86% !important; }
+  }
+</style>
+
 </head>
 
 <body>
@@ -404,7 +568,7 @@
   </div>
 
   <!-- cache-bust -->
-  <script src="app.js?v=12003"></script>
+  <script src="app.js?v=12004"></script>
 </body>
 </html>
 
